# moveit_msgs

moveit_actions/: CMakeLists.txt  package.xml
moveit_actions/action/: Pickup.action  Place.action
